--- a/apps/was/was-deployment.yaml
+++ b/apps/was/was-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
       - name: dong-was
-        image: 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:(IMAGE_TAG)
+        image: 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:latest
         ports:
         - name: http
           containerPort: 8080
