--- a/apps/db/mysql-statefulset.yaml
+++ b/apps/db/mysql-statefulset.yaml
@@ -59,6 +59,7 @@ spec:
       name: mysql-data
     spec:
       accessModes: ["ReadWriteOnce"]
+      storageClassName: gp2
       resources:
         requests:
           storage: 20Gi
