--- a/github/workflows/build-push-gitops.yml
+++ b/github/workflows/build-push-gitops.yml
@@ -36,22 +36,22 @@ jobs:
       - name: Build & Push image to ECR
         shell: bash
         run: |
-          docker build -t 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:${IMAGE_TAG} .
+          docker build  -f Dockerfile.dockerfile -t 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:${IMAGE_TAG} .
           docker push 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:${IMAGE_TAG}
 
-      - name: Update manifest image tag (GitOps)
-        shell: powershell
-        run: |
-          $file = "apps/was/was-deployment.yaml"
-          $content = Get-Content $file -Raw
-          $new = $content -replace "\(IMAGE_TAG\)", "$env:IMAGE_TAG"
-          Set-Content -Path $file -Value $new -NoNewline
+     # - name: Update manifest image tag (GitOps)
+      #  shell: powershell
+       # run: |
+        #  $file = "apps/was/was-deployment.yaml"
+         # $content = Get-Content $file -Raw
+          #$new = $content -replace "\(IMAGE_TAG\)", "$env:IMAGE_TAG"
+         # Set-Content -Path $file -Value $new -NoNewline
 
-      - name: Commit & push manifest update
-        shell: bash
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git add apps/dong/was/was-deployment.yaml
-          git commit -m "chore(gitops): deploy ${IMAGE_TAG}" || echo "No changes to commit"
-          git push
+     # - name: Commit & push manifest update
+     #   shell: bash
+      #  run: |
+       #   git config user.name "github-actions"
+       #   git config user.email "github-actions@users.noreply.github.com"
+       #   git add apps/was/was-deployment.yaml
+       #   git commit -m "chore(gitops): deploy ${IMAGE_TAG}" || echo "No changes to commit"
+       #   git push
