--- a/.github/workflows/build-push-gitops.yml
+++ b/.github/workflows/build-push-gitops.yml
@@ -3,10 +3,14 @@ name: build-push-and-gitops
 on:
   push:
     branches: ["main"]
-  workflow_dispatch:
 
 permissions:
   contents: write
+
+env:
+  AWS_REGION: ap-northeast-2
+  ECR_REGISTRY: 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com
+  ECR_REPOSITORY: dong/dongtest
 
 jobs:
   build_push_gitops:
@@ -21,39 +25,43 @@ jobs:
         run: |
           "IMAGE_TAG=$env:GITHUB_SHA" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
 
-      - name: Configure AWS credentials (Access Key)
+      - name: Configure AWS credentials
         shell: powershell
         run: |
           aws configure set aws_access_key_id "${{ secrets.AWS_ACCESS_KEY_ID }}"
           aws configure set aws_secret_access_key "${{ secrets.AWS_SECRET_ACCESS_KEY }}"
-          aws configure set default.region "ap-northeast-2"
+          aws configure set default.region "${{ env.AWS_REGION }}"
 
-      - name: Login to ECR
+      - name: Verify AWS account (debug)
         shell: powershell
         run: |
-          aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com
+          aws sts get-caller-identity
+          aws ecr describe-repositories --region $env:AWS_REGION --repository-names "${{ env.ECR_REPOSITORY }}"
+
+      - name: Login to ECR
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build & Push image to ECR
         shell: powershell
         run: |
-          docker build -f Dockerfile.dockerfile -t 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:$env:IMAGE_TAG .
-          docker push 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:$env:IMAGE_TAG
+          docker version
+          docker build -f Dockerfile.dockerfile -t $env:ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$env:IMAGE_TAG .
+          docker push $env:ECR_REGISTRY/${{ env.ECR_REPOSITORY }}:$env:IMAGE_TAG
 
-      # 필요하면 나중에 다시 켜자 (지금은 빌드/푸시 먼저 성공시키기)
-      - name: Update manifest image tag (GitOps)
-        shell: powershell
-        run: |
-          $file = "apps/was/was-deployment.yaml"
-          $content = Get-Content $file -Raw
-          $new = $content -replace "\(IMAGE_TAG\)", "$env:IMAGE_TAG"
-          Set-Content -Path $file -Value $new -NoNewline
-      
-      - name: Commit & push manifest update
-        shell: powershell
-        run: |
-          git config user.name "github-actions"
-          git config user.email "github-actions@users.noreply.github.com"
-          git add apps/was/was-deployment.yaml
-          git commit -m "chore(gitops): deploy $env:IMAGE_TAG"
-          if ($LASTEXITCODE -ne 0) { Write-Host "No changes to commit" }
-          git push
+      # 아래는 필요 시 다시 활성화
+      # - name: Update manifest image tag (GitOps)
+      #   shell: powershell
+      #   run: |
+      #     $file = "apps/was/was-deployment.yaml"
+      #     $content = Get-Content $file -Raw
+      #     $new = $content -replace "\(IMAGE_TAG\)", "$env:IMAGE_TAG"
+      #     Set-Content -Path $file -Value $new -NoNewline
+      #
+      # - name: Commit & push manifest update
+      #   shell: powershell
+      #   run: |
+      #     git config user.name "github-actions"
+      #     git config user.email "github-actions@users.noreply.github.com"
+      #     git add apps/was/was-deployment.yaml
+      #     git commit -m "chore(gitops): deploy $env:IMAGE_TAG"
+      #     git push
