--- a/apps/was/was-configmap.yaml
+++ b/apps/was/was-configmap.yaml
@@ -8,4 +8,35 @@ data:
     DB_HOST: "mysql"
     DB_PORT: "3306"
 
+    apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: was-config
+  namespace: dong
+data:
+  make-status-page.sh: |
+    #!/bin/sh
+    set -e
+
     
+    DB_HOST="${DB_HOST:-mysql}"
+    DB_PORT="${DB_PORT:-3306}"
+
+    
+    if (echo > /dev/tcp/$DB_HOST/$DB_PORT) >/dev/null 2>&1; then
+      STATUS="OK"
+    else
+      STATUS="FAIL"
+    fi
+
+    cat > /usr/local/tomcat/webapps/ROOT/index.html <<EOF
+    <!DOCTYPE html>
+    <html>
+    <head><meta charset="UTF-8"><title>WAS</title></head>
+    <body>
+      <h1>WAS SERVER (Tomcat)</h1>
+      <p>DB Connection (port check): <b>${STATUS}</b></p>
+      <p>DB Target: ${DB_HOST}:${DB_PORT}</p>
+    </body>
+    </html>
+    EOF
