--- a/apps/web/web-deployment.yaml
+++ b/apps/web/web-deployment.yaml
@@ -14,16 +14,27 @@ spec:
         app: dong-web
     spec:
       containers:
-      - name: nginx
-        image: nginx:1.25
-        ports:
-        - name: http
-          containerPort: 80
-        volumeMounts:
-        - name: nginx-conf
-          mountPath: /etc/nginx/conf.d/default.conf
-          subPath: default.conf
+        - name: nginx
+          image: nginx:1.25
+          ports:
+            - containerPort: 80
+          volumeMounts:
+            - name: nginx-conf
+              mountPath: /etc/nginx/conf.d/default.conf
+              subPath: default.conf
+            - name: nginx-html
+              mountPath: /usr/share/nginx/html/index.html
+              subPath: index.html
       volumes:
-      - name: nginx-conf
-        configMap:
-          name: nginx-conf
+        - name: nginx-conf
+          configMap:
+            name: nginx-conf
+            items:
+              - key: default.conf
+                path: default.conf
+        - name: nginx-html
+          configMap:
+            name: nginx-conf
+            items:
+              - key: index.html
+                path: index.html
