--- a/apps/web/nginx-configmap.yaml
+++ b/apps/web/nginx-configmap.yaml
@@ -7,12 +7,33 @@ data:
   default.conf: |
     server {
       listen 80;
+      server_name _;
+
+      
+      root /usr/share/nginx/html;
+      index index.html;
 
       location / {
-        proxy_pass http://dong-was:8080;
+        try_files $uri $uri/ /index.html;
+      }
+
+      
+      location /app/ {
+        proxy_pass http://dong-was:8080/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
       }
     }
+
+  index.html: |
+    <!DOCTYPE html>
+    <html>
+    <head><meta charset="UTF-8"><title>WEB</title></head>
+    <body>
+      <h1>WEB SERVER (Nginx)</h1>
+      <p>This is dong-web static page</p>
+      <p><a href="/app/">Go to WAS</a></p>
+      <p><a href="/app/health/db">Go to WAS DB Check</a></p>
+    </body>
+    </html>
