--- a/.github/workflows/build-push-gitops.yml
+++ b/.github/workflows/build-push-gitops.yml
@@ -28,9 +28,7 @@ jobs:
           aws configure set default.region "ap-northeast-2"
 
       - name: Login to ECR
-        shell: powershell
-        run: |
-          aws ecr get-login-password --region ap-northeast-2 | docker login --username AWS --password-stdin 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com
+        uses: aws-actions/amazon-ecr-login@v2
 
       - name: Build & Push image to ECR
         shell: powershell
