--- a/apps/was/was-deployment.yaml
+++ b/apps/was/was-deployment.yaml
@@ -13,7 +13,6 @@ spec:
       labels:
         app: dong-was
     spec:
-      # 1) initContainerê°€ ROOT/index.html??ë§Œë“¤?´ë‘ 
       initContainers:
         - name: make-was-status-page
           image: alpine:3.20
@@ -42,10 +41,9 @@ spec:
           volumeMounts:
             - name: was-root
               mountPath: /usr/local/tomcat/webapps/ROOT
+    
 
-      # 2) ?¤ì œ WAS ì»¨í…Œ?´ë„ˆ (Tomcat)
       containers:
-<<<<<<< HEAD
       - name: dong-was
         image: 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:7a68c68ea42db248cf075ffde504599f799c6add
         ports:
@@ -70,19 +68,15 @@ spec:
             secretKeyRef:
               name: mysql-secret
               key: MYSQL_PASSWORD
-=======
         - name: dong-was
-          # ???¬ê¸°ë§???ECR ?´ë?ì§€ë¡?ë°”ê¿”ì¤?
-          # ?? 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:7a68c68ea42db248cf075ffde504599f799c6add
           image: 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:7a68c68ea42db248cf075ffde504599f799c6add
+          image: 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:${IMAGE_TAG}
           ports:
             - containerPort: 8080
           volumeMounts:
             - name: was-root
               mountPath: /usr/local/tomcat/webapps/ROOT
 
-      # 3) initContainerê°€ ë§Œë“  ?Œì¼??WAS ì»¨í…Œ?´ë„ˆê°€ ê·¸ë?ë¡??¬ìš©
       volumes:
         - name: was-root
           emptyDir: {}
->>>>>>> 96e2b90 (update)
