--- a/apps/was/was-deployment.yaml
+++ b/apps/was/was-deployment.yaml
@@ -14,39 +14,37 @@ spec:
         app: dong-was
     spec:
       initContainers:
-        - name: make-was-status
+        - name: make-dbcheck-page
           image: alpine:3.20
           command: ["/bin/sh", "-c"]
           args:
             - |
-              apk add --no-cache bash >/dev/null 2>&1 || true
-              cp /scripts/make-status-page.sh /tmp/make-status-page.sh
-              chmod +x /tmp/make-status-page.sh
-              /tmp/make-status-page.sh || true
-          env:
-            - name: DB_HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: was-config
-                  key: DB_HOST
-            - name: DB_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: was-config
-                  key: DB_PORT
+              apk add --no-cache busybox-extras >/dev/null 2>&1 || true
+              DB_HOST="mysql"
+              DB_PORT="3306"
+              STATUS="FAIL"
+              if nc -z -w 2 "${DB_HOST}" "${DB_PORT}"; then
+                STATUS="OK"
+              fi
+
+              cat > /tomcat-root/index.html <<EOF
+              <!DOCTYPE html>
+              <html>
+              <head><meta charset="UTF-8"><title>WAS</title></head>
+              <body>
+                <h1>WAS SERVER (Tomcat)</h1>
+                <p>DB Connection (port check): <b>${STATUS}</b></p>
+                <p>Target: ${DB_HOST}:${DB_PORT}</p>
+              </body>
+              </html>
+              EOF
           volumeMounts:
-            - name: was-scripts
-              mountPath: /scripts
             - name: was-root
-              mountPath: /usr/local/tomcat/webapps/ROOT
+              mountPath: /tomcat-root
 
       containers:
         - name: dong-was
-<<<<<<< HEAD
-          image: 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:(IMAGE_TAG)
-=======
-          image: 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:6f93a2a5fa55fc2bd6f395b0e388edb04c43cdbb
->>>>>>> 2c693a34c49932d0f745c0be9ab604d4dbcd2686
+          image: 401670234592.dkr.ecr.ap-northeast-2.amazonaws.com/dong/dongtest:latest
           ports:
             - containerPort: 8080
           volumeMounts:
@@ -54,9 +52,5 @@ spec:
               mountPath: /usr/local/tomcat/webapps/ROOT
 
       volumes:
-        - name: was-scripts
-          configMap:
-            name: was-config
-            defaultMode: 0755
         - name: was-root
           emptyDir: {}
